--- a/index4.html
+++ b/index4.html
@@ -41,7 +41,7 @@
       <div id="versionTabs" class="flex justify-center md:justify-start space-x-2 md:space-x-4 mb-4"></div>
 
       <!-- Visor 360° -->
-      <div id="viewer" class="w-full lg:w-1/2 h-[200px] md:h-[316px] overflow-hidden cursor-grab bg-cover bg-no-repeat"></div>
+      <div id="viewer" class="aspect-video w-full lg:w-1/2 h-[200px] md:h-[316px] overflow-hidden cursor-grab bg-cover bg-no-repeat"></div>
 
       <div class="flex justify-center space-x-4 font-semibold italic text-gray-600">
         <p>Arrastra para girar</p>
@@ -821,10 +821,7 @@
         dx: {
           "DX 4X2/4X4 MT": [
             { name: "Plata Metalizado", code: "silver", hex: "#D3D3D3" },
-            { name: "Negro Mica", code: "black", hex: "#191919" },
-            { name: "Gris Oscuro Metalizado", code: "gray", hex: "#A6A6A6" },
-            { name: "Super Blanco", code: "white", hex: "#F1F1EF" },
-            { name: "Rojo Metalizado", code: "red", hex: "#8A0309" }
+            { name: "Super Blanco", code: "white", hex: "#F1F1EF" }
           ]
         }
       },
@@ -832,10 +829,7 @@
         dx: {
           "DX 4X2/4X4 MT": [
             { name: "Plata Metalizado", code: "silver", hex: "#D3D3D3" },
-            { name: "Negro Mica", code: "black", hex: "#191919" },
-            { name: "Gris Oscuro Metalizado", code: "gray", hex: "#A6A6A6" },
-            { name: "Super Blanco", code: "white", hex: "#F1F1EF" },
-            { name: "Rojo Metalizado", code: "red", hex: "#8A0309" }
+            { name: "Super Blanco", code: "white", hex: "#F1F1EF" }
           ]
         }
       },
@@ -981,7 +975,6 @@
             { name: "Rojo Metalizado", code: "red", hex: "#AC1625" },
             { name: "Negro Mica", code: "black", hex: "#292826" },
             { name: "Super Blanco", code: "white", hex: "#F8F8F8" },
-            { name: "Azul Oscuro Metalizado", code: "blue", hex: "#00022E" },
             { name: "Blanco Perlado", code: "white-perl", hex: "#DBDAD6" },
             { name: "Gris Oscuro", code: "gray", hex: "#746D67" },
             { name: "Gris Plata", code: "silver", hex: "#DCDCDE" }
@@ -992,7 +985,6 @@
             { name: "Rojo Metalizado", code: "red", hex: "#AC1625" },
             { name: "Negro Mica", code: "black", hex: "#292826" },
             { name: "Super Blanco", code: "white", hex: "#F8F8F8" },
-            { name: "Azul Oscuro Metalizado", code: "blue", hex: "#00022E" },
             { name: "Blanco Perlado", code: "white-perl", hex: "#DBDAD6" },
             { name: "Gris Oscuro", code: "gray", hex: "#746D67" },
             { name: "Gris Plata", code: "silver", hex: "#DCDCDE" }
@@ -1016,7 +1008,6 @@
             { name: "Rojo Metalizado", code: "red", hex: "#AC1625" },
             { name: "Negro Mica", code: "black", hex: "#292826" },
             { name: "Super Blanco", code: "white", hex: "#F8F8F8" },
-            { name: "Azul Oscuro Metalizado", code: "blue", hex: "#00022E" },
             { name: "Blanco Perlado", code: "white-perl", hex: "#DBDAD6" },
             { name: "Gris Oscuro", code: "gray", hex: "#746D67" },
             { name: "Gris Plata", code: "silver", hex: "#DCDCDE" }
